# hyphen

./: .gitignore  CHANGELOG.md  LICENSE  README.md  THIRD_PARTY_LICENSES.md  analysis_options.yaml  ffigen.yaml  pubspec.yaml
android/: build.gradle  settings.gradle
android/src/main/: AndroidManifest.xml
build_scripts/: build_android.sh  build_ios.sh  build_linux.sh  build_macos.sh  build_web.sh
example/: .gitignore  README.md  pubspec.yaml
example/android/app/: build.gradle.kts
example/ios/Runner/: Info.plist
example/ios/Runner.xcodeproj/: project.pbxproj
example/lib/: main.dart
example/linux/: CMakeLists.txt
example/linux/flutter/: generated_plugins.cmake
example/linux/runner/: my_application.cc
example/macos/Runner.xcodeproj/: project.pbxproj
example/macos/Runner/Configs/: AppInfo.xcconfig
example/web/: index.html  manifest.json
example/windows/: CMakeLists.txt
example/windows/flutter/: generated_plugins.cmake
example/windows/runner/: Runner.rc  main.cpp
ios/: hyphen.podspec
ios/Classes/: force_link.c  hyphen.c  hyphen_ffi.c
ios/lib/libhyphen.xcframework/: Info.plist
lib/: hyphen.dart
lib/src/: hyphen_stub.dart  utils.dart
lib/src/ffi/: dynamic_library_loader.dart  hyphen_ffi.dart  hyphen_ffi_bindings_generated.dart
lib/src/web/: hyphen_web.dart  hyphen_web_bindings.dart
lib/src/web/js_runtime/: js_runtime.dart  web_js_runtime.dart
linux/: CMakeLists.txt  dummy.c
macos/: hyphen.podspec
macos/Classes/: hyphen.c
src/wrapper/: compat_win.h  hyphen_ffi.h  web_helper.c
test/assets/: test_dictionary.dic
test/lib/src/: utils_test.dart
test/lib/src/ffi/: dynamic_library_loader_test.dart  (+1 more)
test/utils/: mock_allocator.dart  mock_bindings.dart
web/: index.html  manifest.json
web/assets/: hyphen.js  hyphen.wasm
windows/: CMakeLists.txt
(+11 files in other folders)
